--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
       margin-bottom: 1rem;
     }
 
-#image-canvas {
-  width: 100%;
-  max-height: 100%;
-  cursor: url('cursor-hand.png') 0 0, pointer;
-  border: 1px solid #ddd;
-  border-radius: 3px;
-  object-fit: contain;
-}
+    #image-canvas {
+      width: 100%;
+      max-height: 100%;
+      cursor: url('cursor-hand.png') 0 0, pointer;
+      border: 1px solid #ddd;
+      border-radius: 3px;
+      object-fit: contain;
+    }
 
     #selected-colors {
       width: 25%;
@@ -60,10 +60,28 @@
       background-color: #f9f9f9;
     }
 
-    #selected-colors strong {
+    #selected-colors > div.title-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       margin-bottom: 0.5rem;
+    }
+
+    #selected-colors strong {
       font-size: 1rem;
-      text-align: center;
+    }
+
+    #export-colors {
+      font-size: 0.8rem;
+      cursor: pointer;
+      padding: 0.2rem 0.5rem;
+      border: 1px solid #888;
+      background-color: #eee;
+      border-radius: 3px;
+      transition: background-color 0.2s;
+    }
+    #export-colors:hover {
+      background-color: #ddd;
     }
 
     #color-list {
@@ -137,7 +155,10 @@
       <canvas id="image-canvas"></canvas>
     </div>
     <div id="selected-colors">
-      <strong>Colori selezionati</strong>
+      <div class="title-bar">
+        <strong>Colori selezionati</strong>
+        <button id="export-colors">Esporta</button>
+      </div>
       <div id="color-list"></div>
 
       <div id="custom-color-section">
@@ -232,6 +253,26 @@
     });
 
     updateCustomColor(); // inizializzazione
+
+    // Esporta colori
+    const exportBtn = document.getElementById('export-colors');
+
+    exportBtn.addEventListener('click', () => {
+      if (addedColors.size === 0) {
+        alert('Nessun colore selezionato da esportare.');
+        return;
+      }
+      const text = Array.from(addedColors).join('\n');
+      const blob = new Blob([text], { type: 'text/plain' });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = 'colori-selezionati.txt';
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+      URL.revokeObjectURL(url);
+    });
   </script>
 </body>
 </html>
