--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
       font-size: 1rem;
     }
 
+    #export-btn {
+      padding: 0.2rem 0.5rem;
+      font-size: 0.85rem;
+      cursor: pointer;
+      border: 1px solid #888;
+      border-radius: 3px;
+      background-color: white;
+      transition: background-color 0.2s ease;
+    }
+
+    #export-btn:hover {
+      background-color: #ddd;
+    }
+
     #color-list {
       display: flex;
       flex-direction: column;
@@ -88,7 +102,7 @@
       border-radius: 4px;
       font-size: 0.8rem;
       white-space: nowrap;
-      position: relative;
+      justify-content: space-between;
     }
 
     .swatch {
@@ -99,21 +113,15 @@
     }
 
     .remove-btn {
-      margin-left: auto;
-      cursor: pointer;
       background: transparent;
       border: none;
-      font-weight: bold;
       color: #900;
-      font-size: 1.2rem;
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 1rem;
       line-height: 1;
-      padding: 0 0.3rem;
-      user-select: none;
-      transition: color 0.2s;
-    }
-
-    .remove-btn:hover {
-      color: #f33;
+      padding: 0 6px;
+      flex-shrink: 0;
     }
 
     #custom-color-section {
@@ -122,23 +130,30 @@
       border: 1px solid #ccc;
       border-radius: 4px;
       background-color: #fff;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 0.5rem;
     }
 
     #custom-color-section label {
-      display: block;
-      margin-top: 0.3rem;
+      margin: 0;
       font-size: 0.85rem;
+      flex-shrink: 0;
     }
 
     #custom-color-section input[type="range"] {
-      width: 100%;
+      flex-grow: 1;
+      max-width: 100px;
+      margin: 0 0.2rem;
     }
 
     #custom-color-controls {
       display: flex;
       align-items: center;
       gap: 0.5rem;
-      margin-top: 0.5rem;
+      margin: 0;
+      flex-shrink: 0;
     }
 
     #custom-swatch {
@@ -151,6 +166,39 @@
       padding: 0.2rem 0.5rem;
       font-size: 0.85rem;
       cursor: pointer;
+      border: 1px solid #888;
+      border-radius: 3px;
+      background-color: white;
+      transition: background-color 0.2s ease;
+    }
+
+    #add-custom-color:hover {
+      background-color: #ddd;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      main {
+        flex-direction: column;
+        height: auto;
+      }
+
+      #image-container, #selected-colors {
+        width: 100%;
+        height: auto;
+      }
+
+      #custom-color-section {
+        gap: 0.3rem;
+      }
+
+      #custom-color-section label {
+        font-size: 0.75rem;
+      }
+
+      #custom-color-section input[type="range"] {
+        max-width: 70px;
+      }
     }
   </style>
 </head>
@@ -164,7 +212,7 @@
     <div id="selected-colors">
       <div id="selected-colors-header">
         <strong>Colori selezionati</strong>
-        <button id="export-btn" title="Esporta colori">Esporta</button>
+        <button id="export-btn" title="Esporta colori selezionati">Esporta</button>
       </div>
       <div id="color-list"></div>
 
@@ -192,7 +240,6 @@
     const colorList = document.getElementById('color-list');
     const addedColors = new Set();
 
-    // Gestione caricamento immagine
     imageInput.addEventListener('change', (e) => {
       const file = e.target.files[0];
       if (!file) return;
@@ -210,7 +257,6 @@
       reader.readAsDataURL(file);
     });
 
-    // Clic su canvas per prendere colore
     canvas.addEventListener('click', (e) => {
       const rect = canvas.getBoundingClientRect();
       const scaleX = canvas.width / rect.width;
@@ -222,16 +268,13 @@
       addColorBox(hex);
     });
 
-    // Funzione per convertire RGB in HEX
     function rgbToHex(r, g, b) {
       return "#" + [r, g, b].map(x => x.toString(16).padStart(2, '0')).join('');
     }
 
-    // Aggiunge colore nella lista se non già presente
     function addColorBox(hex) {
       if (addedColors.has(hex)) return;
       addedColors.add(hex);
-
       const div = document.createElement('div');
       div.className = 'color-box';
       div.innerHTML = `
@@ -239,17 +282,17 @@
         <span>${hex}</span>
         <button class="remove-btn" title="Rimuovi colore">&times;</button>
       `;
+      colorList.appendChild(div);
 
-      // Rimuovi colore al click sulla 'x'
-      div.querySelector('.remove-btn').addEventListener('click', () => {
+      // Rimuovi colore
+      const removeBtn = div.querySelector('.remove-btn');
+      removeBtn.addEventListener('click', () => {
         addedColors.delete(hex);
         div.remove();
       });
-
-      colorList.appendChild(div);
     }
 
-    // RGB sliders per colore custom
+    // RGB sliders
     const redSlider = document.getElementById('red');
     const greenSlider = document.getElementById('green');
     const blueSlider = document.getElementById('blue');
@@ -277,20 +320,23 @@
 
     updateCustomColor(); // inizializzazione
 
-    // Bottone esporta
-    document.getElementById('export-btn').addEventListener('click', () => {
+    // Esporta colori
+    const exportBtn = document.getElementById('export-btn');
+    exportBtn.addEventListener('click', () => {
       if (addedColors.size === 0) {
-        alert("Nessun colore selezionato da esportare.");
+        alert('Nessun colore selezionato da esportare.');
         return;
       }
-      const text = Array.from(addedColors).join('\n');
+      const colorsArray = Array.from(addedColors);
+      const text = colorsArray.join('\n');
       const blob = new Blob([text], { type: 'text/plain' });
       const url = URL.createObjectURL(blob);
 
       const a = document.createElement('a');
       a.href = url;
-      a.download = 'colori-selezionati.txt';
+      a.download = 'colori_selezionati.txt';
       a.click();
+
       URL.revokeObjectURL(url);
     });
   </script>
