--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <title>Trova i colori</title>
-  <link href="https://fonts.googleapis.com/css2?family=Aptos+Narrow&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Aptos+Narrow&display=swap" rel="stylesheet"/>
   <style>
     body {
       font-family: 'Aptos Narrow', sans-serif;
@@ -12,14 +12,12 @@
       padding: 0;
       box-sizing: border-box;
     }
-
     header {
       color: #333;
       padding: 1rem;
       text-align: center;
       font-size: 1.5rem;
     }
-
     main {
       display: flex;
       flex-direction: row;
@@ -27,52 +25,49 @@
       gap: 1rem;
       height: calc(100vh - 80px);
     }
-
     #image-container {
       width: 75%;
       display: flex;
       flex-direction: column;
-      position: relative;
       border: 1px solid #ccc;
       border-radius: 5px;
       padding: 0.5rem;
+      position: relative;
+      overflow: auto;
     }
-
     #image-input {
       margin-bottom: 1rem;
     }
-
     #image-canvas {
-      width: 100%;
-      max-height: 100%;
-      cursor: crosshair;
       border: 1px solid #ddd;
       border-radius: 3px;
-      object-fit: contain;
+      cursor: crosshair;
+      display: block;
+      max-width: 100%;
+      height: auto; /* Mantieni proporzioni immagine */
+      user-select: none;
     }
-
     #hover-preview {
-      position: absolute;
-      display: none;
+      position: fixed;
       pointer-events: none;
-      background-color: white;
+      background: #fff;
       border: 1px solid #999;
+      padding: 4px 6px;
+      font-size: 0.75rem;
+      display: none;
+      align-items: center;
+      gap: 5px;
       border-radius: 4px;
-      padding: 4px;
-      font-size: 0.8rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      z-index: 10;
+      z-index: 1000;
+      box-shadow: 0 0 6px rgba(0,0,0,0.15);
+      font-family: monospace;
     }
-
     #hover-preview .swatch {
       width: 16px;
       height: 16px;
-      border: 1px solid #aaa;
-      display: inline-block;
-      margin-right: 4px;
-      vertical-align: middle;
+      border: 1px solid #ccc;
+      flex-shrink: 0;
     }
-
     #selected-colors {
       width: 25%;
       border: 1px solid #ccc;
@@ -81,8 +76,8 @@
       display: flex;
       flex-direction: column;
       background-color: #f9f9f9;
+      overflow: hidden;
     }
-
     #selected-colors-header {
       display: flex;
       justify-content: space-between;
@@ -92,7 +87,6 @@
       font-weight: bold;
       color: #333;
     }
-
     #export-btn {
       cursor: pointer;
       font-size: 0.85rem;
@@ -102,19 +96,17 @@
       background-color: #eee;
       transition: background-color 0.2s ease;
     }
-
     #export-btn:hover {
       background-color: #ddd;
     }
-
     #color-list {
       display: flex;
       flex-direction: column;
       overflow-y: auto;
       gap: 0.3rem;
       flex-grow: 1;
+      max-height: calc(100vh - 160px);
     }
-
     .color-box {
       display: flex;
       align-items: center;
@@ -125,15 +117,14 @@
       font-size: 0.8rem;
       white-space: nowrap;
       position: relative;
+      user-select: none;
     }
-
     .swatch {
       width: 16px;
       height: 16px;
       border: 1px solid #ccc;
       flex-shrink: 0;
     }
-
     .remove-btn {
       margin-left: auto;
       cursor: pointer;
@@ -144,11 +135,9 @@
       padding: 0 4px;
       line-height: 1;
     }
-
     .remove-btn:hover {
       color: #f33;
     }
-
     #custom-color-section {
       margin-top: 1rem;
       padding: 0.5rem;
@@ -159,53 +148,55 @@
       flex-direction: column;
       gap: 0.5rem;
     }
-
     .color-slider-row {
       display: flex;
       align-items: center;
       gap: 0.4rem;
     }
-
     .color-label {
-      width: 16px;
-      height: 16px;
+      width: 20px;
+      height: 20px;
       border-radius: 3px;
-      border: 1px solid #ccc;
       flex-shrink: 0;
     }
-
+    .red-label   { background-color: red; }
+    .green-label { background-color: green; }
+    .blue-label  { background-color: blue; }
     .color-slider-row input[type="range"] {
       flex-grow: 1;
-      max-width: 100%;
+      -webkit-appearance: none;
+      height: 6px;
+      border-radius: 3px;
+      background: #ddd;
+      outline: none;
+      margin: 0;
     }
-
-    .color-slider-row span {
+    .slider-value {
       width: 30px;
       text-align: right;
-      font-family: monospace;
       font-size: 0.85rem;
+      font-weight: bold;
+      font-family: monospace;
+      flex-shrink: 0;
     }
-
     #custom-color-controls {
       display: flex;
       align-items: center;
       gap: 0.5rem;
       margin-top: 0.3rem;
     }
-
     #custom-swatch {
       width: 24px;
       height: 24px;
       border: 1px solid #ccc;
       flex-shrink: 0;
     }
-
     #custom-hex {
       font-family: monospace;
       font-weight: 600;
       flex-shrink: 0;
+      user-select: all;
     }
-
     #add-custom-color {
       padding: 0.3rem 0.7rem;
       font-size: 0.85rem;
@@ -216,20 +207,20 @@
       transition: background-color 0.2s ease;
       flex-shrink: 0;
     }
-
     #add-custom-color:hover {
       background-color: #ddd;
     }
-
     @media (max-width: 600px) {
       main {
         flex-direction: column;
         height: auto;
       }
-
       #image-container, #selected-colors {
         width: 100%;
         height: auto;
+      }
+      #color-list {
+        max-height: 200px;
       }
     }
   </style>
@@ -240,10 +231,9 @@
     <div id="image-container">
       <input type="file" id="image-input" accept="image/*" />
       <canvas id="image-canvas"></canvas>
-      <div id="hover-preview">
-        <div class="swatch"></div><span class="hex">#000000</span>
-      </div>
+      <div id="hover-preview"><div class="swatch"></div><span>#000000</span></div>
     </div>
+
     <div id="selected-colors">
       <div id="selected-colors-header">
         <span>Colori selezionati</span>
@@ -254,19 +244,19 @@
       <div id="custom-color-section">
         <label><strong>Crea un colore:</strong></label>
         <div class="color-slider-row">
-          <div class="color-label" style="background: red;"></div>
+          <div class="color-label red-label"></div>
           <input type="range" id="red" min="0" max="255" value="0" />
-          <span id="red-value">0</span>
+          <span id="val-red" class="slider-value">0</span>
         </div>
         <div class="color-slider-row">
-          <div class="color-label" style="background: green;"></div>
+          <div class="color-label green-label"></div>
           <input type="range" id="green" min="0" max="255" value="0" />
-          <span id="green-value">0</span>
+          <span id="val-green" class="slider-value">0</span>
         </div>
         <div class="color-slider-row">
-          <div class="color-label" style="background: blue;"></div>
+          <div class="color-label blue-label"></div>
           <input type="range" id="blue" min="0" max="255" value="0" />
-          <span id="blue-value">0</span>
+          <span id="val-blue" class="slider-value">0</span>
         </div>
         <div id="custom-color-controls">
           <div id="custom-swatch"></div>
@@ -285,7 +275,9 @@
     const addedColors = new Set();
     const hoverPreview = document.getElementById('hover-preview');
     const hoverSwatch = hoverPreview.querySelector('.swatch');
-    const hoverHex = hoverPreview.querySelector('.hex');
+    const hoverHex = hoverPreview.querySelector('span');
+
+    let imgLoaded = false;
 
     imageInput.addEventListener('change', (e) => {
       const file = e.target.files[0];
@@ -295,51 +287,95 @@
       reader.onload = function (event) {
         const img = new Image();
         img.onload = function () {
+          // Set canvas dimension exactly to image
           canvas.width = img.width;
           canvas.height = img.height;
+
+          // Remove object-fit style to avoid mismatch
+          canvas.style.width = img.width + 'px';
+          canvas.style.height = img.height + 'px';
+
           ctx.clearRect(0, 0, canvas.width, canvas.height);
           ctx.drawImage(img, 0, 0);
+          imgLoaded = true;
         };
         img.src = event.target.result;
       };
       reader.readAsDataURL(file);
     });
 
+    function getCursorPos(evt) {
+      // Support mouse and touch events
+      let clientX, clientY;
+      if (evt.touches && evt.touches.length) {
+        clientX = evt.touches[0].clientX;
+        clientY = evt.touches[0].clientY;
+      } else {
+        clientX = evt.clientX;
+        clientY = evt.clientY;
+      }
+
+      const rect = canvas.getBoundingClientRect();
+
+      // Calculate relative coordinates inside canvas CSS box
+      const xInCanvas = clientX - rect.left;
+      const yInCanvas = clientY - rect.top;
+
+      // Calculate scale between canvas bitmap and CSS pixels
+      const scaleX = canvas.width / rect.width;
+      const scaleY = canvas.height / rect.height;
+
+      // Calculate correct pixel coordinate in bitmap
+      let x = Math.floor(xInCanvas * scaleX);
+      let y = Math.floor(yInCanvas * scaleY);
+
+      // Clamp coordinates inside canvas
+      x = Math.min(Math.max(x, 0), canvas.width - 1);
+      y = Math.min(Math.max(y, 0), canvas.height - 1);
+
+      return { x, y, clientX, clientY };
+    }
+
     function rgbToHex(r, g, b) {
       return "#" + [r, g, b].map(x => x.toString(16).padStart(2, '0')).join('');
     }
 
-    canvas.addEventListener('mousemove', (e) => {
-      if (canvas.width === 0 || canvas.height === 0) return;
-      const rect = canvas.getBoundingClientRect();
-      const scaleX = canvas.width / rect.width;
-      const scaleY = canvas.height / rect.height;
-      const x = Math.floor((e.clientX - rect.left) * scaleX);
-      const y = Math.floor((e.clientY - rect.top) * scaleY);
+    function updateHoverPreview(evt) {
+      if (!imgLoaded) {
+        hoverPreview.style.display = 'none';
+        return;
+      }
+      const { x, y, clientX, clientY } = getCursorPos(evt);
+
       const pixel = ctx.getImageData(x, y, 1, 1).data;
       const hex = rgbToHex(pixel[0], pixel[1], pixel[2]);
 
       hoverSwatch.style.backgroundColor = hex;
       hoverHex.textContent = hex;
-      hoverPreview.style.display = 'block';
-      hoverPreview.style.left = `${e.clientX + 10}px`;
-      hoverPreview.style.top = `${e.clientY + 10}px`;
-    });
 
-    canvas.addEventListener('mouseleave', () => {
+      // Position the preview near the finger/mouse pointer but inside viewport
+      let left = clientX + 15;
+      let top = clientY + 15;
+
+      const previewRect = hoverPreview.getBoundingClientRect();
+      const viewportWidth = window.innerWidth;
+      const viewportHeight = window.innerHeight;
+
+      if (left + previewRect.width > viewportWidth) {
+        left = clientX - previewRect.width - 15;
+      }
+      if (top + previewRect.height > viewportHeight) {
+        top = clientY - previewRect.height - 15;
+      }
+
+      hoverPreview.style.left = left + 'px';
+      hoverPreview.style.top = top + 'px';
+      hoverPreview.style.display = 'flex';
+    }
+
+    function hideHoverPreview() {
       hoverPreview.style.display = 'none';
-    });
-
-    canvas.addEventListener('click', (e) => {
-      const rect = canvas.getBoundingClientRect();
-      const scaleX = canvas.width / rect.width;
-      const scaleY = canvas.height / rect.height;
-      const x = Math.floor((e.clientX - rect.left) * scaleX);
-      const y = Math.floor((e.clientY - rect.top) * scaleY);
-      const pixel = ctx.getImageData(x, y, 1, 1).data;
-      const hex = rgbToHex(pixel[0], pixel[1], pixel[2]);
-      addColorBox(hex);
-    });
+    }
 
     function addColorBox(hex) {
       if (addedColors.has(hex)) return;
@@ -361,52 +397,107 @@
       colorList.appendChild(div);
     }
 
-    const redSlider = document.getElementById('red');
-    const greenSlider = document.getElementById('green');
-    const blueSlider = document.getElementById('blue');
-    const redValue = document.getElementById('red-value');
-    const greenValue = document.getElementById('green-value');
-    const blueValue = document.getElementById('blue-value');
+    // Event listeners for mouse and touch
+
+    canvas.addEventListener('mousemove', updateHoverPreview);
+    canvas.addEventListener('mouseleave', hideHoverPreview);
+    canvas.addEventListener('click', (evt) => {
+      if (!imgLoaded) return;
+      const { x, y } = getCursorPos(evt);
+      const pixel = ctx.getImageData(x, y, 1, 1).data;
+      const hex = rgbToHex(pixel[0], pixel[1], pixel[2]);
+      addColorBox(hex);
+    });
+
+    // Support touch events for mobile (touchmove for hover, touchend for click)
+    canvas.addEventListener('touchmove', (evt) => {
+      evt.preventDefault();
+      updateHoverPreview(evt);
+    }, { passive: false });
+    canvas.addEventListener('touchend', (evt) => {
+      evt.preventDefault();
+      if (!imgLoaded) return;
+      // Touchend coords may be absent, so get last touch from changedTouches
+      const touch = evt.changedTouches[0];
+      if (!touch) return;
+      const rect = canvas.getBoundingClientRect();
+      const clientX = touch.clientX;
+      const clientY = touch.clientY;
+
+      const xInCanvas = clientX - rect.left;
+      const yInCanvas = clientY - rect.top;
+      const scaleX = canvas.width / rect.width;
+      const scaleY = canvas.height / rect.height;
+      let x = Math.floor(xInCanvas * scaleX);
+      let y = Math.floor(yInCanvas * scaleY);
+
+      x = Math.min(Math.max(x, 0), canvas.width - 1);
+      y = Math.min(Math.max(y, 0), canvas.height - 1);
+
+      const pixel = ctx.getImageData(x, y, 1, 1).data;
+      const hex = rgbToHex(pixel[0], pixel[1], pixel[2]);
+      addColorBox(hex);
+      hideHoverPreview();
+    }, { passive: false });
+
+    canvas.addEventListener('touchcancel', hideHoverPreview);
+
+    // Custom color picker sliders
+    const sliders = {
+      red: document.getElementById('red'),
+      green: document.getElementById('green'),
+      blue: document.getElementById('blue'),
+    };
+    const sliderValues = {
+      red: document.getElementById('val-red'),
+      green: document.getElementById('val-green'),
+      blue: document.getElementById('val-blue'),
+    };
     const customSwatch = document.getElementById('custom-swatch');
     const customHex = document.getElementById('custom-hex');
     const addCustomBtn = document.getElementById('add-custom-color');
 
     function updateCustomColor() {
-      const r = parseInt(redSlider.value);
-      const g = parseInt(greenSlider.value);
-      const b = parseInt(blueSlider.value);
-      redValue.textContent = r;
-      greenValue.textContent = g;
-      blueValue.textContent = b;
+      const r = parseInt(sliders.red.value);
+      const g = parseInt(sliders.green.value);
+      const b = parseInt(sliders.blue.value);
+
+      sliderValues.red.textContent = r;
+      sliderValues.green.textContent = g;
+      sliderValues.blue.textContent = b;
+
       const hex = rgbToHex(r, g, b);
       customSwatch.style.backgroundColor = hex;
       customHex.textContent = hex;
     }
 
-    redSlider.addEventListener('input', updateCustomColor);
-    greenSlider.addEventListener('input', updateCustomColor);
-    blueSlider.addEventListener('input', updateCustomColor);
+    Object.values(sliders).forEach(slider => {
+      slider.addEventListener('input', updateCustomColor);
+    });
 
     addCustomBtn.addEventListener('click', () => {
       const hex = customHex.textContent;
       addColorBox(hex);
     });
 
+    // Inizializza custom color picker
     updateCustomColor();
 
-    const exportBtn = document.getElementById('export-btn');
-    exportBtn.addEventListener('click', () => {
+    // Esporta i colori in un file testo
+    document.getElementById('export-btn').addEventListener('click', () => {
       if (addedColors.size === 0) {
-        alert("Nessun colore selezionato da esportare.");
+        alert('Nessun colore selezionato da esportare.');
         return;
       }
-      const content = Array.from(addedColors).join('\n');
-      const blob = new Blob([content], { type: 'text/plain' });
+      const lines = Array.from(addedColors).join('\n');
+      const blob = new Blob([lines], {type: 'text/plain'});
       const url = URL.createObjectURL(blob);
+
       const a = document.createElement('a');
       a.href = url;
       a.download = 'colori_selezionati.txt';
       a.click();
+
       URL.revokeObjectURL(url);
     });
   </script>
